# anki-image2card

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: pr.yml  release.yml
assets/: logo.icns
cmake/: bundle_ocr_libs.sh
src/: Application.cpp  Application.h  main.cpp
src/ai/: ElevenLabsAudioProvider.cpp  ElevenLabsAudioProvider.h  GoogleTextProvider.cpp  GoogleTextProvider.h  IAudioAIProvider.h  ITextAIProvider.h  MiniMaxAudioProvider.cpp  MiniMaxAudioProvider.h  NativeAudioProvider.cpp  NativeAudioProvider.h  XAiTextProvider.cpp  XAiTextProvider.h
src/ai/native/: NativeAudioProviderInternal.h  NativeAudioProvider_Linux.cpp  NativeAudioProvider_Mac.mm  NativeAudioProvider_Windows.cpp
src/api/: AnkiConnectClient.cpp  AnkiConnectClient.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: FieldTypes.h  Logger.cpp  Logger.h
src/core/sdl/: SDLWrappers.h
src/language/: ILanguage.h  JapaneseLanguage.h
src/language/analyzer/: ILocalAnalyzer.h  LocalAnalyzer.cpp  LocalAnalyzer.h  SentenceAnalyzer.cpp  SentenceAnalyzer.h
src/language/audio/: ForvoClient.cpp  ForvoClient.h  IAudioSource.h
src/language/dictionary/: AIDictionaryClient.cpp  AIDictionaryClient.h  IDictionaryClient.h  JMDictionary.cpp  JMDictionary.h
src/language/furigana/: IFuriganaGenerator.h  JapaneseCharUtils.cpp  JapaneseCharUtils.h  MecabBasedFuriganaGenerator.cpp  MecabBasedFuriganaGenerator.h
src/language/morphology/: IMorphologicalAnalyzer.h  MecabAnalyzer.cpp  MecabAnalyzer.h  MecabToken.h
src/language/pitch_accent/: IPitchAccentLookup.h  PitchAccentDatabase.cpp  PitchAccentDatabase.h
src/language/services/: AITranslationService.cpp  AITranslationService.h  DeepLService.cpp  DeepLService.h  GoogleTranslateService.cpp  GoogleTranslateService.h  ILanguageService.h  NoneTranslationService.cpp  NoneTranslationService.h
src/language/translation/: AITranslator.cpp  AITranslator.h  DeepLTranslator.cpp  DeepLTranslator.h  GoogleTranslateTranslator.cpp  GoogleTranslateTranslator.h  ITranslator.h  NoneTranslator.h
src/ocr/: AIOCRProvider.cpp  AIOCRProvider.h  IOCRProvider.h  NativeOCRProvider.cpp  NativeOCRProvider.h  TesseractOCRProvider.cpp  TesseractOCRProvider.h
src/ocr/native/: NativeOCRProviderInternal.h  NativeOCRProvider_Linux.cpp  NativeOCRProvider_Mac.mm  NativeOCRProvider_Windows.cpp
src/ui/: AnkiCardSettingsSection.cpp  AnkiCardSettingsSection.h  ConfigurationSection.cpp  ConfigurationSection.h  ImageSection.cpp  ImageSection.h  StatusSection.cpp  StatusSection.h  UIComponent.h
src/ui/fields/: CardField.cpp  CardField.h
src/utils/: Base64Utils.cpp  Base64Utils.h  ImageProcessor.cpp  ImageProcessor.h
